Added dict api
